Implemented Windows Firewall rules management
- Added a progress ring to **Microsoft Defender -> Exclusions**.

The [Windows Firewall](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Windows-Firewall) page now includes a new **Management** section. From there, you can:

- Browse for individual files to allow or block through Windows Firewall, controlling whether they can make network connections.
- Browse for folders to allow or block all executable files within them, including executables in all subfolders.
- List all of the Firewall rule created by the Harden System Security app.
- Delete any Firewall rules created by the Harden System Security app.

You can now block network access through Windows Firewall for high-risk dual-use binaries to reduce abuse for malicious downloads or data exfiltration. This implements the requested feature in [#706](https://github.com/HotCakeX/Harden-Windows-Security/issues/706). The full list of these programs is available in the [Windows Firewall page in the wiki](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Windows-Firewall).

--- a/Harden System Security/ReleaseNotes.txt
+++ b/Harden System Security/ReleaseNotes.txt
@@ -12,4 +12,6 @@
 
 * Added a new policy to the Optional Overrides to allow elevation on Secure Desktop for Standard user accounts.
 
-Please see GitHub repository's release section for full info.
+* Added new Firewall Rules Management!
+
+Please make sure to visit GitHub repository's release section for full info.
