--- a/Harden System Security/Strings/ES/Resources.resw
+++ b/Harden System Security/Strings/ES/Resources.resw
@@ -4912,4 +4912,149 @@ Huella Digital: {3}</value>
   <data name="ApplyBaselineOverridesToggleMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
     <value>Se recomienda encarecidamente aplicar estas invalidaciones opcionales para una experiencia de usuario mejorada al utilizar las líneas base de seguridad de Microsoft.</value>
   </data>
+    <data name="FirewallManagementTab.Header" xml:space="preserve">
+    <value>Administración</value>
+  </data>
+  <data name="FirewallManagementTab.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Crea nuevas reglas del Firewall, consulta y administra las reglas existentes, permite o bloquea todos los archivos dentro de una carpeta, respalda y restaura tus reglas del Firewall y realiza muchas otras acciones.</value>
+  </data>
+  <data name="FirewallManagementTab.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Crea nuevas reglas del Firewall, consulta y administra las reglas existentes, permite o bloquea todos los archivos dentro de una carpeta, respalda y restaura tus reglas del Firewall y realiza muchas otras acciones.</value>
+  </data>
+  <data name="WindowsFirewallSecurityMeasuresTab.Header" xml:space="preserve">
+    <value>Medidas de seguridad</value>
+  </data>
+  <data name="WindowsFirewallSecurityMeasuresTab.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Administra las medidas de seguridad relacionadas con el Firewall de Windows.</value>
+  </data>
+  <data name="WindowsFirewallSecurityMeasuresTab.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Administra las medidas de seguridad relacionadas con el Firewall de Windows.</value>
+  </data>
+  <data name="FirewallManagementConfigureButton.Content" xml:space="preserve">
+    <value>Configurar</value>
+  </data>
+  <data name="FirewallManagementConfigureButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Configura cómo se crearán las nuevas reglas del Firewall. Haz clic derecho o mantén presionado para ver los archivos seleccionados.</value>
+  </data>
+  <data name="FirewallManagementConfigureButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Configura cómo se crearán las nuevas reglas del Firewall. Haz clic derecho o mantén presionado para ver los archivos seleccionados.</value>
+  </data>
+  <data name="FirewallInboundDirectionRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Entrante</value>
+  </data>
+  <data name="FirewallInboundDirectionRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Entrante significa tráfico de red que llega al dispositivo.</value>
+  </data>
+  <data name="FirewallInboundDirectionRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Entrante significa tráfico de red que llega al dispositivo.</value>
+  </data>
+  <data name="FirewallOutboundDirectionRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Saliente</value>
+  </data>
+  <data name="FirewallOutboundDirectionRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Saliente significa tráfico de red que sale del dispositivo.</value>
+  </data>
+  <data name="FirewallOutboundDirectionRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Saliente significa tráfico de red que sale del dispositivo.</value>
+  </data>
+  <data name="FirewallBothDirectionsRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Ambos</value>
+  </data>
+  <data name="FirewallBothDirectionsRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Ambos significa tráfico de red entrante y saliente hacia y desde el dispositivo.</value>
+  </data>
+  <data name="FirewallBothDirectionsRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Ambos significa tráfico de red entrante y saliente hacia y desde el dispositivo.</value>
+  </data>
+  <data name="FirewallAllowActionRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Permitir</value>
+  </data>
+  <data name="FirewallAllowActionRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>La regla del Firewall permitirá el tráfico de red.</value>
+  </data>
+  <data name="FirewallAllowActionRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>La regla del Firewall permitirá el tráfico de red.</value>
+  </data>
+  <data name="FirewallBlockActionRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Bloquear</value>
+  </data>
+  <data name="FirewallBlockActionRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>La regla del Firewall bloqueará el tráfico de red.</value>
+  </data>
+  <data name="FirewallBlockActionRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>La regla del Firewall bloqueará el tráfico de red.</value>
+  </data>
+  <data name="FirewallSelectProgramsMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Seleccionar programas</value>
+  </data>
+  <data name="FirewallSelectProgramsMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Busca los archivos ejecutables de los programas para crear reglas del Firewall.</value>
+  </data>
+  <data name="FirewallSelectProgramsMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Busca los archivos ejecutables de los programas para crear reglas del Firewall.</value>
+  </data>
+  <data name="FirewallSelectFoldersMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Seleccionar carpetas</value>
+  </data>
+  <data name="FirewallSelectFoldersMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Busca carpetas que se examinarán de forma recursiva para encontrar ejecutables y crear reglas del Firewall.</value>
+  </data>
+  <data name="FirewallSelectFoldersMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Busca carpetas que se examinarán de forma recursiva para encontrar ejecutables y crear reglas del Firewall.</value>
+  </data>
+  <data name="FirewallCreateSplitButton.Content" xml:space="preserve">
+    <value>Crear</value>
+  </data>
+  <data name="FirewallCreateSplitButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Crea reglas del Firewall para los archivos seleccionados</value>
+  </data>
+  <data name="FirewallCreateSplitButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Crea reglas del Firewall para los archivos seleccionados</value>
+  </data>
+  <data name="FirewallCreateRulesForDualUseProgramsMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Bloquear programas de doble uso en el Firewall</value>
+  </data>
+  <data name="FirewallCreateRulesForDualUseProgramsMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Bloquea el acceso a la red mediante el Firewall de Windows para binarios de doble uso de alto riesgo, a fin de evitar que se usen para descargas maliciosas o exfiltración de datos.</value>
+  </data>
+  <data name="FirewallCreateRulesForDualUseProgramsMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Bloquea el acceso a la red mediante el Firewall de Windows para binarios de doble uso de alto riesgo, a fin de evitar que se usen para descargas maliciosas o exfiltración de datos.</value>
+  </data>
+  <data name="WindowsFirewallNoFilesSelectedWarningMessage" xml:space="preserve">
+    <value>No se seleccionó ningún archivo para crear reglas del Firewall.</value>
+  </data> 
+  <data name="WindowsFirewallRulesCreatedSuccessMessage" xml:space="preserve">
+    <value>Las reglas del Firewall se crearon correctamente para {0} archivos seleccionados.</value>
+  </data>
+  <data name="WindowsFirewallCreateRuleForMessage" xml:space="preserve">
+    <value>Creando reglas del firewall para: '{0}'</value>
+  </data>
+  <!-- For Windows Firewall Management ListView - Headers -->
+  <data name="DirectionHeader.Text" xml:space="preserve">
+    <value>Dirección</value>
+  </data>
+  <data name="ActionHeader.Text" xml:space="preserve">
+    <value>Acción</value>
+  </data>
+  <!-- End Of For Windows Firewall Management ListView - Headers -->
+  <!-- For Windows Firewall Management ListView - Buttons -->
+  <data name="DirectionColumnHeaderBtn.Content" xml:space="preserve">
+    <value>Dirección</value>
+  </data>
+  <data name="ActionColumnHeaderBtn.Content" xml:space="preserve">
+    <value>Acción</value>
+  </data>
+  <!-- End Of For Windows Firewall Management ListView - Buttons -->
+  <data name="RetrieveFirewallRulesButton.Content" xml:space="preserve">
+    <value>Recuperar reglas del Firewall</value>
+  </data>
+  <data name="RetrieveFirewallRulesButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Recupera todas las reglas del Firewall creadas por la app Harden System Security.</value>
+  </data>
+  <data name="RetrieveFirewallRulesButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Recupera todas las reglas del Firewall creadas por la app Harden System Security.</value>
+  </data>
+  <data name="SuccessfullyRetrievedFirewallRulesMessage" xml:space="preserve">
+    <value>Se recuperaron correctamente {0} reglas del Firewall creadas por la app Harden System Security.</value>
+  </data>
 </root>
