--- a/Harden System Security/Strings/he-IL/Resources.resw
+++ b/Harden System Security/Strings/he-IL/Resources.resw
@@ -4912,4 +4912,149 @@
   <data name="ApplyBaselineOverridesToggleMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
     <value>מומלץ מאוד להחיל עקיפות אופציונליות אלו לשיפור חוויית המשתמש בעת שימוש בקווי בסיס לאבטחה של Microsoft.</value>
   </data>
+    <data name="FirewallManagementTab.Header" xml:space="preserve">
+    <value>ניהול</value>
+  </data>
+  <data name="FirewallManagementTab.ToolTipService.ToolTip" xml:space="preserve">
+    <value>צור כללי חומת אש חדשים, הצג ונהל כללים קיימים, אפשר או חסום את כל הקבצים בתוך תיקייה, גבה ושחזר את כללי חומת האש שלך ובצע פעולות רבות נוספות.</value>
+  </data>
+  <data name="FirewallManagementTab.AutomationProperties.HelpText" xml:space="preserve">
+    <value>צור כללי חומת אש חדשים, הצג ונהל כללים קיימים, אפשר או חסום את כל הקבצים בתוך תיקייה, גבה ושחזר את כללי חומת האש שלך ובצע פעולות רבות נוספות.</value>
+  </data>
+  <data name="WindowsFirewallSecurityMeasuresTab.Header" xml:space="preserve">
+    <value>אמצעי אבטחה</value>
+  </data>
+  <data name="WindowsFirewallSecurityMeasuresTab.ToolTipService.ToolTip" xml:space="preserve">
+    <value>נהל אמצעי אבטחה הקשורים לחומת האש של Windows.</value>
+  </data>
+  <data name="WindowsFirewallSecurityMeasuresTab.AutomationProperties.HelpText" xml:space="preserve">
+    <value>נהל אמצעי אבטחה הקשורים לחומת האש של Windows.</value>
+  </data>
+  <data name="FirewallManagementConfigureButton.Content" xml:space="preserve">
+    <value>הגדר</value>
+  </data>
+  <data name="FirewallManagementConfigureButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>הגדר כיצד ייווצרו כללי חומת האש החדשים. לחץ באמצעות לחצן העכבר הימני או הקש והחזק כדי להציג את הקבצים שנבחרו.</value>
+  </data>
+  <data name="FirewallManagementConfigureButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>הגדר כיצד ייווצרו כללי חומת האש החדשים. לחץ באמצעות לחצן העכבר הימני או הקש והחזק כדי להציג את הקבצים שנבחרו.</value>
+  </data>
+  <data name="FirewallInboundDirectionRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>נכנס</value>
+  </data>
+  <data name="FirewallInboundDirectionRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>נכנס משמעו תעבורת רשת נכנסת אל המכשיר.</value>
+  </data>
+  <data name="FirewallInboundDirectionRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>נכנס משמעו תעבורת רשת נכנסת אל המכשיר.</value>
+  </data>
+  <data name="FirewallOutboundDirectionRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>יוצא</value>
+  </data>
+  <data name="FirewallOutboundDirectionRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>יוצא משמעו תעבורת רשת יוצאת מן המכשיר.</value>
+  </data>
+  <data name="FirewallOutboundDirectionRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>יוצא משמעו תעבורת רשת יוצאת מן המכשיר.</value>
+  </data>
+  <data name="FirewallBothDirectionsRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>שניהם</value>
+  </data>
+  <data name="FirewallBothDirectionsRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>שניהם משמעו תעבורת רשת נכנסת ויוצאת אל המכשיר וממנו.</value>
+  </data>
+  <data name="FirewallBothDirectionsRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>שניהם משמעו תעבורת רשת נכנסת ויוצאת אל המכשיר וממנו.</value>
+  </data>
+  <data name="FirewallAllowActionRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>אפשר</value>
+  </data>
+  <data name="FirewallAllowActionRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>כלל חומת האש יאפשר לתעבורת הרשת לעבור.</value>
+  </data>
+  <data name="FirewallAllowActionRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>כלל חומת האש יאפשר לתעבורת הרשת לעבור.</value>
+  </data>
+  <data name="FirewallBlockActionRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>חסום</value>
+  </data>
+  <data name="FirewallBlockActionRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>כלל חומת האש יחסום את תעבורת הרשת מלעבור.</value>
+  </data>
+  <data name="FirewallBlockActionRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>כלל חומת האש יחסום את תעבורת הרשת מלעבור.</value>
+  </data>
+  <data name="FirewallSelectProgramsMenuFlyoutItem.Text" xml:space="preserve">
+    <value>בחר תוכניות</value>
+  </data>
+  <data name="FirewallSelectProgramsMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>עיין כדי לבחור את קובצי ההפעלה של תוכניות שעבורן ייווצרו כללי חומת אש.</value>
+  </data>
+  <data name="FirewallSelectProgramsMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>עיין כדי לבחור את קובצי ההפעלה של תוכניות שעבורן ייווצרו כללי חומת אש.</value>
+  </data>
+  <data name="FirewallSelectFoldersMenuFlyoutItem.Text" xml:space="preserve">
+    <value>בחר תיקיות</value>
+  </data>
+  <data name="FirewallSelectFoldersMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>עיין כדי לבחור תיקיות שייסרקו באופן רקורסיבי כדי למצוא קובצי הפעלה שעבורם ייווצרו כללי חומת אש.</value>
+  </data>
+  <data name="FirewallSelectFoldersMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>עיין כדי לבחור תיקיות שייסרקו באופן רקורסיבי כדי למצוא קובצי הפעלה שעבורם ייווצרו כללי חומת אש.</value>
+  </data>
+  <data name="FirewallCreateSplitButton.Content" xml:space="preserve">
+    <value>צור</value>
+  </data>
+  <data name="FirewallCreateSplitButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>צור כללי חומת אש עבור הקבצים שנבחרו</value>
+  </data>
+  <data name="FirewallCreateSplitButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>צור כללי חומת אש עבור הקבצים שנבחרו</value>
+  </data>
+  <data name="FirewallCreateRulesForDualUseProgramsMenuFlyoutItem.Text" xml:space="preserve">
+    <value>חסום תוכניות דו-שימושיות בחומת האש</value>
+  </data>
+  <data name="FirewallCreateRulesForDualUseProgramsMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>חסום גישת רשת באמצעות חומת האש של Windows עבור קבצים בינאריים דו-שימושיים בסיכון גבוה, כדי למנוע שימוש בהם להורדות זדוניות או להדלפת נתונים.</value>
+  </data>
+  <data name="FirewallCreateRulesForDualUseProgramsMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>חסום גישת רשת באמצעות חומת האש של Windows עבור קבצים בינאריים דו-שימושיים בסיכון גבוה, כדי למנוע שימוש בהם להורדות זדוניות או להדלפת נתונים.</value>
+  </data>
+  <data name="WindowsFirewallNoFilesSelectedWarningMessage" xml:space="preserve">
+    <value>לא נבחר קובץ ליצירת כללי חומת אש.</value>
+  </data> 
+  <data name="WindowsFirewallRulesCreatedSuccessMessage" xml:space="preserve">
+    <value>כללי חומת האש נוצרו בהצלחה עבור {0} קבצים שנבחרו.</value>
+  </data>
+  <data name="WindowsFirewallCreateRuleForMessage" xml:space="preserve">
+    <value>יוצר כללי חומת אש עבור: '{0}'</value>
+  </data>
+  <!-- For Windows Firewall Management ListView - Headers -->
+  <data name="DirectionHeader.Text" xml:space="preserve">
+    <value>כיוון</value>
+  </data>
+  <data name="ActionHeader.Text" xml:space="preserve">
+    <value>פעולה</value>
+  </data>
+  <!-- End Of For Windows Firewall Management ListView - Headers -->
+  <!-- For Windows Firewall Management ListView - Buttons -->
+  <data name="DirectionColumnHeaderBtn.Content" xml:space="preserve">
+    <value>כיוון</value>
+  </data>
+  <data name="ActionColumnHeaderBtn.Content" xml:space="preserve">
+    <value>פעולה</value>
+  </data>
+  <!-- End Of For Windows Firewall Management ListView - Buttons -->
+  <data name="RetrieveFirewallRulesButton.Content" xml:space="preserve">
+    <value>אחזר כללי חומת אש</value>
+  </data>
+  <data name="RetrieveFirewallRulesButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>אחזר את כל כללי חומת האש שנוצרו על ידי האפליקציה Harden System Security.</value>
+  </data>
+  <data name="RetrieveFirewallRulesButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>אחזר את כל כללי חומת האש שנוצרו על ידי האפליקציה Harden System Security.</value>
+  </data>
+  <data name="SuccessfullyRetrievedFirewallRulesMessage" xml:space="preserve">
+    <value>אוחזרו בהצלחה {0} כללי חומת אש שנוצרו על ידי האפליקציה Harden System Security.</value>
+  </data>
 </root>
