--- a/Harden System Security/Strings/pl-PL/Resources.resw
+++ b/Harden System Security/Strings/pl-PL/Resources.resw
@@ -4912,4 +4912,149 @@ Odcisk Palca: {3}</value>
   <data name="ApplyBaselineOverridesToggleMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
     <value>Zdecydowanie zaleca się zastosowanie tych opcjonalnych nadpisań w celu poprawy komfortu użytkowania podczas korzystania z punktów odniesienia zabezpieczeń firmy Microsoft.</value>
   </data>
+    <data name="FirewallManagementTab.Header" xml:space="preserve">
+    <value>Zarządzanie</value>
+  </data>
+  <data name="FirewallManagementTab.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Twórz nowe reguły Zapory, wyświetlaj i zarządzaj istniejącymi regułami, zezwalaj lub blokuj wszystkie pliki w folderze, twórz kopie zapasowe i przywracaj reguły Zapory oraz wykonuj wiele innych działań.</value>
+  </data>
+  <data name="FirewallManagementTab.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Twórz nowe reguły Zapory, wyświetlaj i zarządzaj istniejącymi regułami, zezwalaj lub blokuj wszystkie pliki w folderze, twórz kopie zapasowe i przywracaj reguły Zapory oraz wykonuj wiele innych działań.</value>
+  </data>
+  <data name="WindowsFirewallSecurityMeasuresTab.Header" xml:space="preserve">
+    <value>Środki bezpieczeństwa</value>
+  </data>
+  <data name="WindowsFirewallSecurityMeasuresTab.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Zarządzaj środkami bezpieczeństwa związanymi z Zaporą systemu Windows.</value>
+  </data>
+  <data name="WindowsFirewallSecurityMeasuresTab.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Zarządzaj środkami bezpieczeństwa związanymi z Zaporą systemu Windows.</value>
+  </data>
+  <data name="FirewallManagementConfigureButton.Content" xml:space="preserve">
+    <value>Konfiguruj</value>
+  </data>
+  <data name="FirewallManagementConfigureButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Skonfiguruj sposób tworzenia nowych reguł Zapory. Kliknij prawym przyciskiem myszy lub dotknij i przytrzymaj, aby wyświetlić wybrane pliki.</value>
+  </data>
+  <data name="FirewallManagementConfigureButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Skonfiguruj sposób tworzenia nowych reguł Zapory. Kliknij prawym przyciskiem myszy lub dotknij i przytrzymaj, aby wyświetlić wybrane pliki.</value>
+  </data>
+  <data name="FirewallInboundDirectionRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Przychodzący</value>
+  </data>
+  <data name="FirewallInboundDirectionRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Przychodzący oznacza ruch sieciowy przychodzący do urządzenia.</value>
+  </data>
+  <data name="FirewallInboundDirectionRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Przychodzący oznacza ruch sieciowy przychodzący do urządzenia.</value>
+  </data>
+  <data name="FirewallOutboundDirectionRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Wychodzący</value>
+  </data>
+  <data name="FirewallOutboundDirectionRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Wychodzący oznacza ruch sieciowy wychodzący z urządzenia.</value>
+  </data>
+  <data name="FirewallOutboundDirectionRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Wychodzący oznacza ruch sieciowy wychodzący z urządzenia.</value>
+  </data>
+  <data name="FirewallBothDirectionsRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Oba</value>
+  </data>
+  <data name="FirewallBothDirectionsRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Oba oznacza ruch sieciowy przychodzący i wychodzący do i z urządzenia.</value>
+  </data>
+  <data name="FirewallBothDirectionsRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Oba oznacza ruch sieciowy przychodzący i wychodzący do i z urządzenia.</value>
+  </data>
+  <data name="FirewallAllowActionRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Zezwalaj</value>
+  </data>
+  <data name="FirewallAllowActionRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Reguła Zapory zezwoli na przepływ ruchu sieciowego.</value>
+  </data>
+  <data name="FirewallAllowActionRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Reguła Zapory zezwoli na przepływ ruchu sieciowego.</value>
+  </data>
+  <data name="FirewallBlockActionRadioMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Blokuj</value>
+  </data>
+  <data name="FirewallBlockActionRadioMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Reguła Zapory zablokuje przepływ ruchu sieciowego.</value>
+  </data>
+  <data name="FirewallBlockActionRadioMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Reguła Zapory zablokuje przepływ ruchu sieciowego.</value>
+  </data>
+  <data name="FirewallSelectProgramsMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Wybierz programy</value>
+  </data>
+  <data name="FirewallSelectProgramsMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Przeglądaj pliki wykonywalne programów, dla których mają zostać utworzone reguły Zapory.</value>
+  </data>
+  <data name="FirewallSelectProgramsMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Przeglądaj pliki wykonywalne programów, dla których mają zostać utworzone reguły Zapory.</value>
+  </data>
+  <data name="FirewallSelectFoldersMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Wybierz foldery</value>
+  </data>
+  <data name="FirewallSelectFoldersMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Przeglądaj foldery, które zostaną przeskanowane rekursywnie w celu znalezienia plików wykonywalnych, dla których mają zostać utworzone reguły Zapory.</value>
+  </data>
+  <data name="FirewallSelectFoldersMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Przeglądaj foldery, które zostaną przeskanowane rekursywnie w celu znalezienia plików wykonywalnych, dla których mają zostać utworzone reguły Zapory.</value>
+  </data>
+  <data name="FirewallCreateSplitButton.Content" xml:space="preserve">
+    <value>Utwórz</value>
+  </data>
+  <data name="FirewallCreateSplitButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Utwórz reguły Zapory dla wybranych plików</value>
+  </data>
+  <data name="FirewallCreateSplitButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Utwórz reguły Zapory dla wybranych plików</value>
+  </data>
+  <data name="FirewallCreateRulesForDualUseProgramsMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Blokuj programy dual-use w Zaporze</value>
+  </data>
+  <data name="FirewallCreateRulesForDualUseProgramsMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Zablokuj dostęp do sieci za pomocą Zapory systemu Windows dla binariów dual-use wysokiego ryzyka, aby zapobiec ich wykorzystaniu do złośliwych pobrań lub eksfiltracji danych.</value>
+  </data>
+  <data name="FirewallCreateRulesForDualUseProgramsMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Zablokuj dostęp do sieci za pomocą Zapory systemu Windows dla binariów dual-use wysokiego ryzyka, aby zapobiec ich wykorzystaniu do złośliwych pobrań lub eksfiltracji danych.</value>
+  </data>
+  <data name="WindowsFirewallNoFilesSelectedWarningMessage" xml:space="preserve">
+    <value>Nie wybrano pliku do utworzenia reguł Zapory.</value>
+  </data> 
+  <data name="WindowsFirewallRulesCreatedSuccessMessage" xml:space="preserve">
+    <value>Pomyślnie utworzono reguły Zapory dla {0} wybranych plików.</value>
+  </data>
+  <data name="WindowsFirewallCreateRuleForMessage" xml:space="preserve">
+    <value>Tworzenie reguł Zapory dla: '{0}'</value>
+  </data>
+  <!-- For Windows Firewall Management ListView - Headers -->
+  <data name="DirectionHeader.Text" xml:space="preserve">
+    <value>Kierunek</value>
+  </data>
+  <data name="ActionHeader.Text" xml:space="preserve">
+    <value>Akcja</value>
+  </data>
+  <!-- End Of For Windows Firewall Management ListView - Headers -->
+  <!-- For Windows Firewall Management ListView - Buttons -->
+  <data name="DirectionColumnHeaderBtn.Content" xml:space="preserve">
+    <value>Kierunek</value>
+  </data>
+  <data name="ActionColumnHeaderBtn.Content" xml:space="preserve">
+    <value>Akcja</value>
+  </data>
+  <!-- End Of For Windows Firewall Management ListView - Buttons -->
+  <data name="RetrieveFirewallRulesButton.Content" xml:space="preserve">
+    <value>Pobierz reguły Zapory</value>
+  </data>
+  <data name="RetrieveFirewallRulesButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Pobierz wszystkie reguły Zapory utworzone przez aplikację Harden System Security.</value>
+  </data>
+  <data name="RetrieveFirewallRulesButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Pobierz wszystkie reguły Zapory utworzone przez aplikację Harden System Security.</value>
+  </data>
+  <data name="SuccessfullyRetrievedFirewallRulesMessage" xml:space="preserve">
+    <value>Pomyślnie pobrano {0} reguł Zapory utworzonych przez aplikację Harden System Security.</value>
+  </data>
 </root>
